# magprud

./: .env.example  .gitignore  HISTORIA_DO_PROJETO.md  README.md  pyproject.toml  tutorial.md
docs/: COMECE-AQUI.md  MONTAGEM-PASSO-A-PASSO.md  prompt-inicial.md
seguros/: cli.py  config.py  orchestrator.py
seguros/connectors/: base.py  fake.py
seguros/connectors/mag/: connector.py
seguros/connectors/prudential/: connector.py  scraping.py  selectors.yaml
seguros/dashboard/: app.py  service.py  webhook.py  worker.py
seguros/dashboard/static/: index.html  login.html
seguros/db/: connection.py  repository.py  schema.sql
seguros/domain/: models.py  state.py
seguros/messaging/: templates.py
tests/: conftest.py  test_config.py  test_inbound.py  test_insurer_split.py  test_intents.py  test_orchestrator.py  test_phone.py  test_report.py  test_repository.py  test_session_auth.py  test_state.py  test_templates.py  test_work_status.py
tools/: insurer_login.py
